concord_macros/tests/trybuild/fail/codegen/websocket_response_spelling.stderr
error: codec spec expects exactly one type argument: `Enc<T>`
  --> tests/trybuild/fail/codegen/websocket_response_spelling.rs:12:12
   |
12 |         -> WebSocket<String, String>
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
